--- a/Front/src/app/components/partials/product/product.component.html
+++ b/Front/src/app/components/partials/product/product.component.html
@@ -5,22 +5,22 @@
             <hr />
         </div>
         <div class="image-container">
-            <img src="../../../../assets/images/{{ image }}" alt="{{ product.name }}" class="product-image">
+            <img src="../../../../assets/images/{{ image }}" alt="{{ product.BrandName }}" class="product-image">
         </div>
         <div class="informations-container">
-            <h1>{{product.name}}</h1>
+            <h1>{{product.BrandName}}</h1>
             <hr class="hr-title" />
-            <p class="showcase">Product description :</p>
-            <p class="text">{{product.description}}</p>
+            <p class="showcase">Product Description :</p>
+            <p class="text">{{product.Description}}</p>
             <hr class="hr-info" />
             <p class="showcase">Product price :</p>
-            <p class="text">{{product.price/100}} €</p>
+            <p class="text">{{product.Price/100}} €</p>
             <hr class="hr-info" />
             <div class="controls">
                 <a routerLink="../../products" class="back-btn">Back</a>
-                <a *ngIf="isOwnProduct || isAdmin" routerLink="../../product/modify/{{ product._id }}"
+                <a *ngIf="isOwnProduct || isAdmin" routerLink="../../product/modify/{{ product.id }}"
                     class="modify-btn">Modify</a>
-                <a *ngIf="isOwnProduct || isAdmin" routerLink="../../product/delete/{{ product._id }}"
+                <a *ngIf="isOwnProduct || isAdmin" routerLink="../../product/delete/{{ product.id }}"
                     class="delete-btn">Delete</a>
             </div>
         </div>
