--- a/Front/src/app/components/pages/products/products.component.html
+++ b/Front/src/app/components/pages/products/products.component.html
@@ -32,13 +32,16 @@
         It looks like none of our products corresponds to your search.
     </div>
     <div routerLink="../product/{{ product.id }}" class="product-card" *ngFor="let product of resultList">
-        <div class="product-image">
-            <img src="../../../../assets/images/{{ images[product.id] }}" alt="{{ product.BrandName }}">
-        </div>
-        <div class="product-text">
-            <h2 class="product-name">{{ product.BrandName }}</h2>
-            <p>{{ product.ModelBrandName }}</p>
-            <p class="product-description">{{ product.Description }}</p>
+        <div class="product-card-content">
+            <div class="product-image">
+                <img src="../../../../assets/images/{{ images[product.id] }}" alt="{{ product.BrandName }}">
+            </div>
+            <div class="product-text">
+                <h2 class="product-name">{{ product.BrandName }}</h2>
+                <p class="product-model">{{ product.ModelBrandName }}</p>
+                <hr style="width: 100%; margin-top: -15px;" />
+                <p class="product-description">Description : {{ product.Description }}</p>
+            </div>
         </div>
         <div class="product-details">
             <span class="product-price">{{ product.Price/100 }} €</span>
