--- a/Front/src/app/components/pages/products/products.component.scss
+++ b/Front/src/app/components/pages/products/products.component.scss
@@ -154,7 +154,7 @@ app-products {
     justify-content: space-evenly;
     row-gap: 5rem;
     column-gap: 4rem;
-    margin: 1rem 15rem 5rem 15rem;
+    margin: 1rem 15rem 1rem 15rem;
     border: 1px solid;
     border-color: rgba(98, 98, 98, 0.286);
     border-radius: 1rem;
@@ -164,67 +164,87 @@ app-products {
 
     .product-card {
         &:hover {
-            transform: scale(1.05);
-            box-shadow: 10px 10px 15px black;
+            transform: scale(1.02);
+            // box-shadow: 10px 10px 15px black;
             transition: 0.2s;
         }
 
         &:active {
-            transform: scale(0.95);
+            transform: scale(1.00);
         }
 
         transition: 0.1s;
-        width: 300px;
+        width: 45%;
         background-color: var(--cream);
         box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-        border-radius: 2rem;
-        border: 4px groove;
+        border-radius: 1rem;
+        border: 2px groove;
         border-color: rgba(89, 89, 89, 0.405);
         overflow: hidden;
         cursor: pointer;
 
-        .product-image {
-            width: 100%;
-            height: 200px;
-            img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
+        .product-card-content {
+            display: flex; /* Use flexbox to arrange content within each product card */
+            flex-direction: row; /* Arrange content horizontally */
+            align-items: center; /* Align content vertically in the center */
+
+            .product-image {
+                width: 40%;
+                margin-bottom: -8px;
+                background-size: cover;
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+    
+            .product-text {
+                display: flex;
+                flex-direction: column;
+                align-items: start;
+                padding: 0rem 1rem 3rem 2rem;
+                width: 55%;
+
+                .product-name {
+                    font-size: 25px;
+                    font-weight: bold;
+                    margin: 0 0 -25px 0;
+                }
+
+                .product-model {
+                    font-size: 18px;
+                }
+    
+                .product-description {
+                    width: 90%;
+                    height: 70px;
+                    font-size: 16px;
+                    color: #2a2a2a;
+                    margin: 0px 0;
+                    overflow: hidden; 
+                    text-overflow: ellipsis; 
+                    display: -webkit-box;
+                    -webkit-line-clamp: 3; 
+                    -webkit-box-orient: vertical;
+                    white-space: normal;
+                }
             }
         }
 
-        .product-text {
-            padding: 0rem 1rem 1rem 1rem;
-            background: var(--cream);
-            background: linear-gradient(
-                180deg,
-                var(--cream) 85%,
-                rgba(0, 41, 107, 1) 100%
-            );
-            .product-name {
-                font-size: 18px;
-                font-weight: bold;
-                margin: 10px 0;
-            }
-
-            .product-description {
-                font-size: 14px;
-                color: #666;
-                margin: 10px 0;
-            }
-        }
 
         .product-details {
             display: flex;
+            flex-direction: column;
             justify-content: space-between;
             align-items: center;
             padding: 10px;
-            background-color: var(--dark);
+            background-color: var(--main-color);
 
             .product-price {
                 font-size: 16px;
                 font-weight: bold;
-                color: var(--gold);
+                color: black;
             }
         }
     }
