--- a/Front/src/app/components/pages/products/products.component.scss
+++ b/Front/src/app/components/pages/products/products.component.scss
@@ -202,7 +202,7 @@ app-products {
             .product-text {
                 display: flex;
                 flex-direction: column;
-                align-items: start;
+                align-items: flex-start;
                 padding: 0rem 1rem 3rem 2rem;
                 width: 55%;
 
