--- a/Front/src/app/components/partials/footer/footer.component.html
+++ b/Front/src/app/components/partials/footer/footer.component.html
@@ -13,8 +13,8 @@
             </ul>
             <ul>
                 <li><a routerLink="/users">Users</a><br></li>
-                <li *ngIf="loggedIn !== ''"><a routerLink="/logout">Logout</a><br></li>
-                <li *ngIf="loggedIn === ''"><a routerLink="/login">Login</a><br></li>
+                <li *ngIf="loggedIn"><a routerLink="/logout">Logout</a><br></li>
+                <li *ngIf="!loggedIn"><a routerLink="/login">Login</a><br></li>
                 <li><a routerLink="/me">Account</a><br></li>
             </ul>
         </nav>
