--- a/Front/src/app/components/partials/product/product.component.scss
+++ b/Front/src/app/components/partials/product/product.component.scss
@@ -9,134 +9,179 @@
     align-items: center;
     flex-wrap: nowrap;
     background-color: whitesmoke;
-    column-gap: 5rem;
-    border: 0.3rem solid;
-    border-radius: 3rem;
+    border: 0.1rem solid;
+    border-radius: 1rem;
     margin: 3rem 0 3rem 0;
     padding: 5rem 2rem 5rem 2rem;
-    width: 50%;
-    min-width: 500px;
+    width: 75%;
+    height: 50%;
+    // min-width: 500px;
 
+    
     .title {
         display: flex;
         flex-direction: column;
         width: 90%;
 
         h1 {
-            margin: 0 0 0 0;
+            margin: 0 0 -1.5rem 0;
             font-size: 5rem;
-            align-self: center;
+        }
+
+        .model-showcase {
+            margin-top: 0;
+            margin-bottom: -1rem;
+            font-size: 2.5rem;
         }
 
         hr {
             width: 100%;
-            margin-bottom: 6rem;
+            margin-bottom: 4rem;
         }
     }
 
-    .image-container {
-        max-width: 35rem;
-        min-width: 35rem;
-
-        img {
-            width: 100%;
-            border: 0.3rem solid;
-            border-radius: 2rem;
-        }
-    }
-
-    .informations-container {
+    .image-information-container {
         display: flex;
-        flex-flow: column;
-        width: 80%;
-        border: 0.1rem solid;
-        margin-top: 3rem;
-        border-radius: 5rem;
-        padding: 0.7rem 2rem 2rem 2rem;
-        background-color: rgb(242, 240, 240);
-
-        .hr-info {
-            margin: 0.2rem 0 2rem 0;
-            width: 100%;
-            color: black;
-        }
-
-        .hr-title {
-            margin: 0.2rem 0 4rem 0;
-            width: 100%;
-            color: black;
-        }
-
-        h1 {
-            font-size: 3.5rem;
-            margin: 4rem 0 0 0;
-        }
-
-        .text {
-            margin: 0.4rem 0 0 0;
-        }
-
-        .showcase {
-            font-size: small;
-            color: gray;
-            margin-bottom: 0.2rem;
-        }
-
-        .controls {
+        flex-direction: row;
+        padding: 0 3rem;
+        
+        .image-container {
             display: flex;
+            flex-direction: column;
             justify-content: center;
-            flex-flow: row wrap;
-            margin-top: 3rem;
-            column-gap: 1rem;
-            row-gap: 1rem;
+            min-width: 45%;
+            min-height: 45%;
+            max-width: 45%;
+            max-height: 45%;
+            // position: relative;
+            margin: 2rem 5rem 0 8rem;
+        
+            img {
+                border: 1px solid;
+                width: 100%;
+            }
+            
+            .button-image{
+                display: flex;
+                justify-content: center;
 
-            a {
-                background: linear-gradient(163deg, var(--light) 0%, var(--dark) 61%);
-                border: none;
-                color: #fff;
-                padding: 1.5rem 4rem;
-                border-radius: 1rem;
-                box-shadow: 4px 4px 4px 0px var(--hard-shadow-color);
-                cursor: pointer;
-
-                &:hover {
-                    background: linear-gradient(163deg, var(--gold) 10%, var(--light-gold));
-                    transform: scale(1.05);
+                .arrow {
+                    top: 50%;
+                    transform: translateY(10%);
+                    background-color: transparent;
+                    width: 20%;
                     color: black;
-                    transition: 0.2s;
+                    border: none;
+                    font-size: 3rem;
+                    cursor: pointer;
+            
+                    &:disabled {
+                        cursor: default;
+                        opacity: 0.5;
+                    }
                 }
-
-                &:active {
-                    transform: scale(0.98);
-                    transition: 0.1s;
+            
+                .left-arrow {
+                    left: 0;
+                }
+            
+                .right-arrow {
+                    right: 0;
                 }
             }
-
-            .back-btn {
-                background: rgb(122, 162, 184);
+        }
+    
+        .informations-container {
+            display: flex;
+            flex-flow: column;
+            width: 100%;
+            height: 100%;
+            border: 0.1rem solid;
+            margin: 0;
+            border-radius: 1rem;
+            padding: 2rem 2rem 2rem 2rem;
+            background-color: rgb(242, 240, 240);
+    
+            .hr-info {
+                margin: 0.2rem 0 1rem 0;
+                width: 100%;
+                color: black;
+            }
+    
+            .hr-title {
+                margin: 0.2rem 0 4rem 0;
+                width: 100%;
+                color: black;
+            }
+    
+            .details-title{
+                margin-bottom: 0;
+                font-size: large;
             }
 
-            .delete-btn {
-                background: brown;
+            .detail {
+                font-size: medium;
+                padding-left: 1rem;
             }
+    
+            h1 {
+                font-size: 3.5rem;
+                margin: 4rem 0 0 0;
+            }
+    
+            .text {
+                margin: 0.4rem 0 0 0;
+            }
+    
+            .showcase {
+                font-size: large;
+                color: gray;
+                margin: 0;
+            }
+    
         }
     }
+    
+    .controls {
+        display: flex;
+        justify-content: center;
+        flex-flow: row wrap;
+        margin-top: 3rem;
+        column-gap: 1rem;
+        row-gap: 1rem;
+
+        a {
+            background: linear-gradient(163deg, var(--light) 0%, var(--dark) 61%);
+            border: none;
+            color: #fff;
+            padding: 1.5rem 4rem;
+            border-radius: 1rem;
+            box-shadow: 4px 4px 4px 0px var(--hard-shadow-color);
+            cursor: pointer;
+
+            &:hover {
+                background: linear-gradient(163deg, var(--gold) 10%, var(--light-gold));
+                transform: scale(1.05);
+                color: black;
+                transition: 0.2s;
+            }
+
+            &:active {
+                transform: scale(0.98);
+                transition: 0.1s;
+            }
+        }
+
+        .back-btn {
+            background: rgb(122, 162, 184);
+        }
+
+        .delete-btn {
+            background: brown;
+        }
+    }
+
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 .simple-tab {
     width: 97%;
