--- a/Front/src/app/components/pages/products/products.component.scss
+++ b/Front/src/app/components/pages/products/products.component.scss
@@ -175,6 +175,7 @@ app-products {
 
         transition: 0.1s;
         width: 45%;
+        min-width: 45%;
         background-color: var(--cream);
         box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
         border-radius: 1rem;
