--- a/Front/src/app/components/partials/product/product.component.scss
+++ b/Front/src/app/components/partials/product/product.component.scss
@@ -53,12 +53,13 @@
             min-height: 45%;
             max-width: 45%;
             max-height: 45%;
-            // position: relative;
-            margin: 2rem 5rem 0 8rem;
+            margin: 1rem 5rem 0 8rem;
         
             img {
                 border: 1px solid;
-                width: 100%;
+                height: 350px;
+                width: auto;
+                max-width:800px;
             }
             
             .button-image{
@@ -95,6 +96,8 @@
             display: flex;
             flex-flow: column;
             width: 100%;
+            min-width: 50rem;
+            min-height: 30rem;
             height: 100%;
             border: 0.1rem solid;
             margin: 0;
