[FIX] - Fixed the User in the Front

--- a/Front/src/app/components/pages/me/me.component.html
+++ b/Front/src/app/components/pages/me/me.component.html
@@ -14,7 +14,7 @@
 
         <div class="line">
             <i class="fa-solid fa-location-dot"></i>
-            <input #adresse value="{{ data.Adresse }}" class="input-form" type="text" id="adresses" name="adresses" />
+            <input #Address value="{{ data.Address }}" class="input-form" type="text" id="Addresss" name="Addresss" />
         </div>
         <div class="line">
             <i class="fa-solid fa-lock"></i>
@@ -22,7 +22,7 @@
         </div>
         <div style="display: flex; flex-direction: row; margin-top: 3rem;">
             <button class="button"
-                (click)="userModify(username.value, email.value, adresse.value, password.value)">Modify
+                (click)="userModify(username.value, email.value, Address.value, password.value)">Modify
                 account</button>
             <div style="display: flex; align-items: center; flex-direction: column;">
                 <a routerLink="../newproduct/create" class="create">Create Product</a>
