--- a/Front/src/app/components/pages/users/users.component.html
+++ b/Front/src/app/components/pages/users/users.component.html
@@ -15,7 +15,7 @@
                 <h2 class="user-name">{{ user.Name }}</h2>
                 <p class="user-description">{{ user.Role }}</p>
                 <p class="user-description">{{ user.Email }}</p>
-                <p class="user-description">{{ user.Adresse }}</p>
+                <p class="user-description">{{ user.Address }}</p>
             </div>
         </div>
     </div>
