--- a/Front/src/app/components/pages/me/me.component.html
+++ b/Front/src/app/components/pages/me/me.component.html
@@ -2,40 +2,71 @@
     <div class="user-panel">
         <h1 class="title">Your account</h1>
         <p *ngIf="data.Role == 'admin'" class="admin-text">Admin</p>
-        <div class="line">
-            <i class="fa-solid fa-at"></i>
-            <input #email autofocus value="{{ data.Email }}" class="input-form" type="text" id="email" name="email" />
-        </div>
+        <div *ngIf="!isEditMode">
+            <div class="line">
+                <i class="fa fa-user"></i>
+                <p class="display-form">{{ data.LastName }} {{ data.Name }}</p>
+            </div>
+            <div class="line">
+                <i class="fa-solid fa-at"></i>
+                <p class="display-form">{{ data.Email }}</p>
+            </div>
+            <div class="line">
+                <i class="fa-solid fa-location-dot"></i>
+                <p class="display-form">{{ data.Address }}, {{ data.PostalCode }} {{ data.City }}</p>
+            </div>
 
-        <div class="line">
-            <i class="fa fa-user"></i>
-            <input #username value="{{ data.Name }}" class="input-form" type="text" id="username" name="username" />
+            <div style="display: flex; flex-direction: row; margin-top: 3rem;">
+                <button class="button"
+                    (click)="toggleEditMode()">Modify
+                    account</button>
+                <button class="button"
+                    (click)="createProduct()">Create Product</button>
+            </div>
+            <div class="products-text">
+                <p routerLink="/products/{{ userID }}" class="products-link">
+                    <i class="fa-solid fa-eye"></i>
+                    See all your products !
+                </p>
+            </div>
+            <button class="button delete" (click)="userDelete()">Delete account</button>
         </div>
-
-        <div class="line">
-            <i class="fa-solid fa-location-dot"></i>
-            <input #Address value="{{ data.Address }}" class="input-form" type="text" id="Addresss" name="Addresss" />
-        </div>
-        <div class="line">
-            <i class="fa-solid fa-lock"></i>
-            <input #password placeholder="Password" class="input-form" type="password" id="password" name="password" />
-        </div>
-        <div style="display: flex; flex-direction: row; margin-top: 3rem;">
-            <button class="button"
-                (click)="userModify(username.value, email.value, Address.value, password.value)">Modify
-                account</button>
-            <div style="display: flex; align-items: center; flex-direction: column;">
-                <a routerLink="../newproduct/create" class="create">Create Product</a>
+        <!-- Edit mode -->
+        <div *ngIf="isEditMode">
+            <div class="line">
+                <i class="fa fa-user"></i>
+                <input [(ngModel)]="data.Name" placeholder="{{ data.Name }}" class="input-form" type="text" id="username" name="username" />
+            </div>
+            <div class="line">
+                <i class="fa fa-user"></i>
+                <input [(ngModel)]="data.LastName" placeholder="{{ data.LastName }}" class="input-form" type="text" id="username" name="username" />
+            </div>    
+            <div class="line">
+                <i class="fa-solid fa-at"></i>
+                <input [(ngModel)]="data.Email" autofocus placeholder="{{ data.Email }}" class="input-form" type="text" id="email" name="email" />
+            </div>
+            <div class="line">
+                <i class="fa-solid fa-location-dot"></i>
+                <input [(ngModel)]="data.Address" placeholder="{{ data.Address }}" class="input-form" type="text" id="Addresss" name="Addresss" />
+            </div>
+            <div class="line">
+                <i class="fa-solid fa-city"></i>
+                <input [(ngModel)]="data.City" placeholder="City" class="input-form" type="text" id="city" name="city" style="padding-right: -20px;" />
+            </div>
+            <div class="line">
+                <i class="fa-regular fa-envelope"></i>
+                <input [(ngModel)]="data.PostalCode" placeholder="Postal Code" class="input-form" type="text" id="postalCode" name="postalCode"
+                />
+            </div>
+            <div class="line">
+                <i class="fa-solid fa-lock"></i>
+                <input [(ngModel)]="data.Password" placeholder="Password" class="input-form" type="password" id="password" name="password" />
+            </div>
+            <div class="modify-buttons">
+                <button class="button" (click)="saveChanges()">Confirm</button>
+                <button class="button" (click)="toggleEditMode()">Back</button>
             </div>
         </div>
-        <div class="products-text">
-            <p routerLink="/products/{{ userID }}" class="products-link">
-                <i class="fa-solid fa-eye"></i>
-                See all your products !
-            </p>
-        </div>
-
-        <button class="button delete" (click)="userDelete()">Delete account</button>
         <p class="message">{{ message }}</p>
     </div>
 </div>
