--- a/Front/src/app/components/pages/me/me.component.html
+++ b/Front/src/app/components/pages/me/me.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
     <div class="user-panel">
         <h1 class="title">Your account</h1>
-        <p *ngIf="data.Role == 'admin'" class="admin-text">Admin</p>
+        <p *ngIf="data.Role" class="admin-text">Admin</p>
         <div *ngIf="!isEditMode">
             <div class="line">
                 <i class="fa fa-user"></i>
