--- a/Front/src/app/components/pages/user/user.component.html
+++ b/Front/src/app/components/pages/user/user.component.html
@@ -6,45 +6,69 @@
         <section id="allowed">
             <h1 class="title">{{ targetUser.Name }}</h1>
 
-            <p *ngIf="targetUser.Role == 'admin'" class="admin-text">Admin</p>
-            <div class="line">
-                <i class="fa-solid fa-at"></i>
-                <input #email autofocus value="{{ targetUser.Email }}" class="input-form" type="text" id="email"
-                    name="email" />
+            <p *ngIf="targetUser.Role" class="admin-text">Admin</p>
+            <div *ngIf="!isEditMode">
+                <div class="line">
+                    <i class="fa fa-user"></i>
+                    <p class="display-form">{{ targetUser.LastName }} {{ targetUser.Name }}</p>
+                </div>
+                <div class="line">
+                    <i class="fa-solid fa-at"></i>
+                    <p class="display-form">{{ targetUser.Email }}</p>
+                </div>
+                <div class="line">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p class="display-form">{{ targetUser.Address }}, {{ targetUser.PostalCode }} {{ targetUser.City }}</p>
+                </div>
+    
+                <div style="display: flex; flex-direction: row; margin-top: 3rem;">
+                    <button class="button"
+                        (click)="toggleEditMode()">Modify
+                        account</button>
+                </div>
+                <div class="products-text">
+                    <p routerLink="/products/{{ targetUser.id }}" class="products-link">
+                        <i class="fa-solid fa-eye"></i>
+                        See all of {{targetUser.Name}} products !
+                    </p>
+                </div>
+                <button class="button delete" (click)="userDelete()">Delete account</button>
             </div>
-
-            <div class="line">
-                <i class="fa fa-user"></i>
-                <input #username value="{{ targetUser.Name }}" class="input-form" type="text" id="username"
-                    name="username" />
-            </div>
-
-            <div class="line">
-                <i class="fa-solid fa-location-dot"></i>
-                <input #Address value="{{ targetUser.Address }}" class="input-form" type="text" id="Addresss"
-                    name="Addresss" />
-            </div>
-
-            <div class="line">
-                <i class="fa-solid fa-lock"></i>
-                <input #password placeholder="Password" class="input-form" type="password" id="password"
-                    name="password" />
-            </div>
-            <div style="display: flex; flex-direction: row; margin-top: 3rem;">
-                <button class="button" (click)="userModify(username.value, email.value, Address.value, '')">Modify
-                    account</button>
-                <div style="display: flex; align-items: center; flex-direction: column;">
-                    <a routerLink="../newproduct/create" class="create">Create Product</a>
+            <div *ngIf="isEditMode">
+                <div class="line">
+                    <i class="fa fa-user"></i>
+                    <input [(ngModel)]="targetUser.Name" placeholder="{{ targetUser.Name }}" class="input-form" type="text" id="username" name="username" />
+                </div>
+                <div class="line">
+                    <i class="fa fa-user"></i>
+                    <input [(ngModel)]="targetUser.LastName" placeholder="{{ targetUser.LastName }}" class="input-form" type="text" id="username" name="username" />
+                </div>    
+                <div class="line">
+                    <i class="fa-solid fa-at"></i>
+                    <input [(ngModel)]="targetUser.Email" autofocus placeholder="{{ targetUser.Email }}" class="input-form" type="text" id="email" name="email" />
+                </div>
+                <div class="line">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <input [(ngModel)]="targetUser.Address" placeholder="{{ targetUser.Address }}" class="input-form" type="text" id="Addresss" name="Addresss" />
+                </div>
+                <div class="line">
+                    <i class="fa-solid fa-city"></i>
+                    <input [(ngModel)]="targetUser.City" placeholder="City" class="input-form" type="text" id="city" name="city" style="padding-right: -20px;" />
+                </div>
+                <div class="line">
+                    <i class="fa-regular fa-envelope"></i>
+                    <input [(ngModel)]="targetUser.PostalCode" placeholder="Postal Code" class="input-form" type="text" id="postalCode" name="postalCode"
+                    />
+                </div>
+                <div class="line">
+                    <i class="fa-solid fa-lock"></i>
+                    <input [(ngModel)]="targetUser.Password" placeholder="Password" class="input-form" type="password" id="password" name="password" />
+                </div>
+                <div class="modify-buttons">
+                    <button class="button" (click)="saveChanges()">Confirm</button>
+                    <button class="button" (click)="toggleEditMode()">Back</button>
                 </div>
             </div>
-            <div class="products-text">
-                <p routerLink="/products/{{ paramID }}" class="products-link">
-                    <i class="fa-solid fa-eye"></i>
-                    See all of {{ targetUser.Name }} products !
-                </p>
-            </div>
-
-            <button class="button delete" (click)="userDelete()">Delete account</button>
             <p class="message">{{ message }}</p>
         </section>
     </ng-template>
