--- a/Front/src/app/components/pages/user/user.component.scss
+++ b/Front/src/app/components/pages/user/user.component.scss
@@ -88,6 +88,23 @@
                 border-left-width: 3rem;
             }
         }
+
+        .display-form {
+            width: 100%;
+            padding: 15px 1rem;
+            margin: 1rem 0;
+
+            font-size: large;
+
+            border-radius: 4px;
+            border: 1px solid #ddd;
+        }
+    }
+
+    .modify-buttons {
+        display: flex; 
+        flex-direction: row; 
+        margin-top: 3rem;
     }
 
     .products-text {
