[FIX] - Fixed user

--- a/Front/src/app/components/pages/me/me.component.html
+++ b/Front/src/app/components/pages/me/me.component.html
@@ -63,7 +63,7 @@
                 <input [(ngModel)]="data.Password" placeholder="Password" class="input-form" type="password" id="password" name="password" />
             </div>
             <div class="modify-buttons">
-                <button class="button" (click)="saveChanges()">Confirm</button>
+                <button class="button" (click)="userModify()">Confirm</button>
                 <button class="button" (click)="toggleEditMode()">Back</button>
             </div>
         </div>
