--- a/Front/src/app/components/partials/modify-product/modify-product.component.html
+++ b/Front/src/app/components/partials/modify-product/modify-product.component.html
@@ -1,38 +1,40 @@
 <div class="wrapper">
     <div class="new-product">
         <div class="image-container">
-            <img src="../../../../assets/images/{{ image }}" alt="{{ product.BrandName }}" class="product-image">
+            <img [src]="images[currentImageIndex]" onerror="this.src='../../../../assets/images/voiture.png'" alt="{{ product.BrandName }}" class="product-image">
+            <div class="button-image">
+                <button class="arrow left-arrow" (click)="previousImage()" [disabled]="currentImageIndex === 0 || images.length === 0">&#8592;</button>
+                <button class="arrow right-arrow" (click)="nextImage()" [disabled]="currentImageIndex === images.length - 1 || images.length === 0">&#8594;</button>
+            </div>
         </div>
         <h1 class="title">{{product.BrandName}}</h1>
         <div class="line">
             <i class="fa-solid fa-calendar" style="padding: 0 1px 0 3px;"></i>
-            <input #year placeholder="Year of the product" class="input-form" type="number" id="year" name="year" value={{product.Year}}/>
+            <input [(ngModel)]="data.Year" placeholder="{{product.Year}}" class="input-form" type="number" id="year" name="year" value={{product.Year}}/>
         </div>
         <div class="line">
-            <select #brand class="input-form" (change)="onBrandChange(brand.value)">
-                <option value="" disabled selected>Choose a brand</option>
+            <select #brand class="input-form" (change)="onBrandChange(brand.value)" [(ngModel)]="currentBrandId">
                 <option *ngFor="let brand of brands" [value]="brand.id">{{brand.BrandName}}</option>
             </select>
         </div>
-        
         <div class="line" *ngIf="models.length > 0">
-            <select #model class="input-form" [(ngModel)]="selectedModelId">
+            <select #model class="input-form" [(ngModel)]="data.ModelBrandID">
                 <option *ngFor="let model of models" [value]="model.id">{{model.ModelName}}</option>
             </select>
         </div>
 
         <div class="line">
             <i class="fa-solid fa-usd" style="padding: 0 4px 0 3px;"></i>
-            <input #price class="input-form" type="number" id="price" name="price" value={{product.Price}} />
+            <input [(ngModel)]="data.Price" placeholder="{{product.Price}}" class="input-form" type="number" id="price" name="price" value={{product.Price}} />
         </div>
 
         <div class="line">
             <i class="fa-solid fa-commenting"></i>
-            <input #description class="input-form" type="text" id="desc"
+            <input [(ngModel)]="data.Description" value="{{product.Description}}" class="input-form" type="text" id="desc"
                 name="desc" value={{product.Description}}/>
         </div>
 
-        <button class="button" (click)="changeProduct(selectedModelId, price.value, description.value)" type="button">
+        <button class="button" (click)="changeProduct()" type="button">
             Modify Product!</button><br />
         <p class="message">{{message}}</p>
     </div>
