--- a/Front/src/app/components/partials/product/product.component.html
+++ b/Front/src/app/components/partials/product/product.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="image-information-container">
             <div class="image-container">
-                <img [src]="images[currentImageIndex]" onerror="this.src='../../../../assets/images/voiture.png'" alt="{{ product.BrandName }}" [@fadeInOut]>
+                <img [src]="images[currentImageIndex]" onerror="this.src='../../../../assets/images/voiture.png'" alt="{{ product.BrandName }}">
                 <div class="button-image">
                     <button class="arrow left-arrow" (click)="previousImage()" [disabled]="currentImageIndex === 0 || images.length === 0">&#8592;</button>
                     <button class="arrow right-arrow" (click)="nextImage()" [disabled]="currentImageIndex === images.length - 1 || images.length === 0">&#8594;</button>
@@ -19,7 +19,7 @@
                 <hr class="hr-info" />
                 <h3 class="showcase">Year :</h3>
                 <p class="text">{{product.Year}}</p>
-                <div *ngIf="product.CarDetails.length > 0">
+                <div *ngIf="currentModelsLength !== 0">
                     <hr class="hr-info" />
                     <h3 class="showcase">Car Details : </h3>
                     <div *ngFor="let detail of product.CarDetails">
